--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       name: 'Match-Toy',
       repo: 'https://github.com/match-toy/match-toy',
       ga: 'UA-117997488-1',
-      search: 'auto'
+      search: 'auto',
+      homepage: 'home.md'
     }
 
   </script>
